Full HW#2. Changed endPoint /basket/{id}. Refactored some methods. Now all in work.